k8s/resources/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: portfolio
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: docker.io/redis:6-alpine
        ports:
        - containerPort: 6379
