k8s/resources/services.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api-service
  namespace: portfolio
spec:
  selector:
    app: portfolio-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
