k8s/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.dotwave.io
    secretName: tls
  rules:
  - host: api.dotwave.io
    http:
      paths:
      - path: /api/v1/pf
        pathType: Prefix
        backend:
          service:
            name: portfolio-api-service
            port:
              number: 80
